--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-665.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-2.45MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-722.8KB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 172.99.188.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-317.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-626.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2, server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-490.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-959.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-707.2KB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.71MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇫🇷 法国-306.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: 154.17.25.101, port: 63163, type: ss, cipher: aes-256-gcm, password: !<str> 49231199}
+  - {name: 🇺🇸 美国-889.1KB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇰🇷 韩国-1.03MB/s(Youtube:不良林), server: 152.67.218.38, port: 443, type: vmess, uuid: b5e9480a-b7aa-40a4-f9a7-5299b5e363b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.67.218.38}}
+  - {name: 🇺🇸 美国-5.79MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 未知国家-2.16MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-665.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-722.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-626.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-490.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 未知国家-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
