--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-959.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-707.2KB/s(Youtube:不良林), server: 172.99.188.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-1.71MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇫🇷 法国-306.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: 154.17.25.101, port: 63163, type: ss, cipher: aes-256-gcm, password: !<str> 49231199}
+  - {name: 🇨🇳 中国-782.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-165.0KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-1.13MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-860.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-889.1KB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇰🇷 韩国-1.03MB/s(Youtube:不良林), server: 152.67.218.38, port: 443, type: vmess, uuid: b5e9480a-b7aa-40a4-f9a7-5299b5e363b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.67.218.38}}
   - {name: 🇺🇸 美国-5.79MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-165.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-165.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-165.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-165.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-165.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-165.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-959.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-707.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇫🇷 法国-306.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-165.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
