--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-860.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-782.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-7.71MB/s(Youtube:不良林), server: xmrh013.xmrth-node.xyz, port: 15885, type: vmess, uuid: ab3f9ddc-7c35-3793-98f0-1c37eb9741e1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh013.xmrth-node.xyz}}
-  - {name: 🇮🇹 意大利-631.6KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2, server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-547.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-435.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-383.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-350.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-893.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
+  - {name: 🇺🇸 美国-281.3KB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.143.66.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-372.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-958.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-683.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.71MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-631.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-547.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-435.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-350.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-893.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.71MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-631.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-547.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-435.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-350.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-893.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.71MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-631.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-547.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-435.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-350.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-893.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.71MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-631.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-547.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-435.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-350.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-893.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.71MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-631.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-547.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-435.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-350.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-893.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.71MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-631.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-547.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-435.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-350.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-893.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-860.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.71MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-631.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-547.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-435.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-350.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-893.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
