--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-479.0KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇯🇵 日本-3.02MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-396.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-500.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1016.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-683.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1002.6KB/s(Youtube:不良林), server: 172.99.188.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-545.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: xmrh013.xmrth-node.xyz, port: 15885, type: vmess, uuid: ab3f9ddc-7c35-3793-98f0-1c37eb9741e1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh013.xmrth-node.xyz}}
+  - {name: 🇨🇦 加拿大-152.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-599.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-902.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-958.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-429.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-482.5KB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.143.66.20, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-479.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-500.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1016.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-599.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-479.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-500.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1016.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-599.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-479.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-500.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1016.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-599.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-479.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-500.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1016.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-599.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-479.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-500.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1016.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-599.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-479.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-500.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1016.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-599.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-479.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-500.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1016.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1002.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-599.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-902.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-958.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-429.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-482.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
